fecha bono test

--- a/templates/licitaciones/licitaciones_detail.html
+++ b/templates/licitaciones/licitaciones_detail.html
@@ -12,7 +12,7 @@
 
     <div class="bg-white shadow-lg rounded-lg overflow-hidden mb-8">
         <div class="bg-blue-900  p-4">
-            <h1 class="text-2xl font-bold">Licitación: {{ licitacion.rfq }}</h1>
+            <h1 class="text-2xl text-white font-bold">Licitación: {{ licitacion.rfq }}</h1>
         </div>
         <div class="p-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-8 gap-y-4 text-gray-700">
             <div><strong>Categoría:</strong> {{ licitacion.category.nombre_categoria|default:"N/A" }}</div>
