--- a/templates/proyectos_c/proyecto_c_detail.html
+++ b/templates/proyectos_c/proyecto_c_detail.html
@@ -338,6 +338,19 @@
                         {% endif %}
                     </p>
                 </div>
+
+                <div class="bg-gray-50 p-4 rounded-lg border border-gray-200 min-w-0 max-w-xs">
+                    <p class="text-xs font-semibold text-gray-600 uppercase">Fecha Bono</p>
+                    <p class="text-lg font-medium text-gray-900 mt-1">
+                        {% if master.fecha_estimada_entrega_owner %}
+                            {{ master.fecha_estimada_entrega_owner|subtract_15_days|date:"d M Y" }}
+                        {% else %}
+                            <span class="text-gray-400 text-base">No especificada</span>
+                        {% endif %}
+                    </p>
+                </div>
+
+
                 {% endfor %}
 
             {% for licitacion_rel in proyecto.proyecto_cc_licitacion_set.all %}
