fix nombres discplinas

--- a/templates/proyecto_e_detail.html
+++ b/templates/proyecto_e_detail.html
@@ -81,57 +81,57 @@
                                 </thead>
                                 <tbody class="bg-white divide-y divide-gray-200 text-sm">
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Arquitectura (AR)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIC-AR</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inic_ar|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inic_ar|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Ingeniería Civil (IC)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIC-IC</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inic_ic|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inic_ic|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Ingeniería Eléctrica (IE)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIC-IE</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inic_ie|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inic_ie|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Ingeniería Hidráulica (IH)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIC-IH</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inic_ih|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inic_ih|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Mecánica (DM)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIE-DM</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inie_dm|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inie_dm|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Esp. Eléctrica (EE)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIE-EE</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inie_ee|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inie_ee|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Sist. Mecánicos (SM)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIE-SM</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inie_sm|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inie_sm|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Geotécnica (IG)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIG-IG</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inig_ig|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inig_ig|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Pavimentos (PE)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIG-PE</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inig_pe|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inig_pe|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Costos (CE)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIO-CE</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inio_ce|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inio_ce|default:"-" }}</td>
                                     </tr>
                                     <tr class="hover:bg-gray-50">
-                                        <td class="px-4 py-3 font-medium text-gray-900">Estructuras (ES)</td>
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIO-ES</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inio_es|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inio_es|default:"-" }}</td>
                                     </tr>
