--- a/templates/proyecto_e_detail.html
+++ b/templates/proyecto_e_detail.html
@@ -60,8 +60,8 @@
                                 </thead>
                                 <tbody class="bg-white divide-y divide-gray-200">
                                     <tr>
-                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-bold">{{ latest_revision.hr_diseno_init|default:"0" }}</td>
-                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-bold">{{ latest_revision.hr_apoyo_init|default:"0" }}</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-bold">{{ total_diseno|floatformat:1 }}</td>
+                                        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900 text-center font-bold">{{ total_apoyo|floatformat:1 }}</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -135,11 +135,16 @@
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_inio_es|default:"-" }}</td>
                                         <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_inio_es|default:"-" }}</td>
                                     </tr>
+                                     <tr class="hover:bg-gray-50">
+                                        <td class="px-4 py-3 font-medium text-gray-900">INIT</td>
+                                        <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_diseno_init|default:"-" }}</td>
+                                        <td class="px-4 py-3 text-center text-gray-600">{{ latest_revision.hr_apoyo_init|default:"-" }}</td>
+                                    </tr>
 
                                     <tr class="bg-gray-100 font-bold border-t-2 border-gray-300">
                                         <td class="px-4 py-3 text-gray-900">TOTAL</td>
-                                        <td class="px-4 py-3 text-center text-indigo-700">{{ latest_revision.hr_diseno_init|default:"0" }}</td>
-                                        <td class="px-4 py-3 text-center text-indigo-700">{{ latest_revision.hr_apoyo_init|default:"0" }}</td>
+                                        <td class="px-4 py-3 text-center text-indigo-700">{{ total_diseno|floatformat:1 }}</td>
+                                        <td class="px-4 py-3 text-center text-indigo-700">{{ total_apoyo|floatformat:1 }}</td>
                                     </tr>
                                 </tbody>
                             </table>
