--- a/templates/proyecto_e_detail.html
+++ b/templates/proyecto_e_detail.html
@@ -69,7 +69,7 @@
                     </div>
 
                     <div class="mt-8">
-                        <h3 class="text-lg leading-6 font-medium text-gray-900 mb-4">Desglose por Disciplina</h3>
+                        <h3 class="text-lg leading-6 font-medium text-gray-900 mb-4">Horas de Apoyo por Disciplina</h3>
                         <div class="overflow-x-auto border border-gray-200 rounded-lg shadow-sm">
                             <table class="min-w-full divide-y divide-gray-200">
                                 <thead class="bg-gray-50">
